--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ header .container {
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
-	background: #fff;
+	background: #000;
 	padding: 3px;
 }
 .profile-info h2 {
